<?xml version="1.0" encoding="utf-8"?>
<!-- 
    OpenNoteSecure is an Android application for reading and writing
    encrypted text files to an SD card.
    Copyright (C) 2010 Jared Hatfield

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>
    <string name="app_name">OpenNoteSecure</string>
    <string name="app_header">OpenNoteSecure</string>
    <string name="button_save">Save Content</string>
    <string name="button_close">Close</string>
    <string name="button_newfile">New File</string>
    <string name="button_open">Open File</string>
    <string name="exit">Exit</string>
    <string name="text_file">File Name:</string>
    <string name="text_algorithm">Encryption Algorithm:</string>
    <string name="text_password">Password:</string>
    <string-array name="encrytion_options">
        <item>None</item>
        <item>AES</item>
        <item>DES</item>
    </string-array>
    <string name="menu_help">Help</string>
    <string name="menu_delete">Delete</string>
    <string name="dialog_nosd">No SD card was found.</string>
    <string name="dialog_save">Saving. Please wait...</string>
    <string name="dialog_decrypt">Decrypting. Please wait...</string>
    <string name="toast_error">Error: </string>
    <string name="toast_deleted">Deleted</string>
    <string name="toast_not_deleted"></string>
    <string name="toast_not_created">File was not created.</string>
    <string name="toast_created">Created</string>
    <string name="toast_save_disabled">Save disabled.</string>
</resources>
